Changed the template URL to the github repository URL.

--- a/sample/style.css
+++ b/sample/style.css
@@ -1,6 +1,6 @@
 /*
 Template Name: Sample
-Template URI: http://en.michaeluno.jp
+Template URI: https://github.com/michaeluno/fetch-tweets-sample-template
 Author: Michael Uno
 Author URI: http://en.michaeluno.jp
 Description: A very simple sample template added as a WordPress plugin.
